k8s/04-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        
        # ENVIRONMENT VARIABLES
        # These MUST match what your Backend expects.
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      
      # THE VOLUME DEFINITION:
      # "Where does the drive come from? It comes from the Claim (PVC)."
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
