k8s/02-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  # THE DNS NAME:
  # This determines how other pods find us.
  # Frontend will call: http://backend:8080
  name: backend
spec:
  # THE TRAFFIC DIRECTOR:
  # "Send traffic to any Pod wearing the 'app: backend' sticker."
  selector:
    app: backend

  # THE TYPE:
  # ClusterIP (Default): Only accessible INSIDE the cluster. (Secure/Enterprise choice).
  # NodePort: Opens a specific port on the server (e.g. 30007). (Good for debugging).
  # LoadBalancer: Asks Cloud Provider (AWS/Azure) for a Public IP.
  type: ClusterIP

  ports:
    # "port": The Virtual Service Port.
    # Other pods talk to this port.
  - port: 8080
    
    # "targetPort": The Container Port.
    # The Service forwards traffic here. MUST match what your Java app listens on.
    targetPort: 8080
