k8s/06-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  # TYPE: NodePort
  # This opens a hole in the Minikube cluster so we can access it from Windows.
  # This is standard for "On-Premise" or "Local Dev".
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007 # Hardcoded so we know where to look
